executable(
  'overlay_paint', ['overlay_paint.c', test_resources],
  dependencies: xrdesktop_deps,
  link_with: xrdesktop_lib,
  include_directories: xrdesktop_inc,
  install: false)

executable(
  'overlay_models', ['overlay_models.c', test_resources],
  dependencies: xrdesktop_deps,
  link_with: xrdesktop_lib,
  include_directories: xrdesktop_inc,
  install: false)

executable(
  'overlay_management', ['overlay_management.c', test_resources],
  dependencies: xrdesktop_deps,
  link_with: xrdesktop_lib,
  include_directories: xrdesktop_inc,
  install: false)

executable(
  'overlay_client', ['overlay_client.c', test_resources],
  dependencies: xrdesktop_deps,
  link_with: xrdesktop_lib,
  include_directories: xrdesktop_inc,
  install: false)

executable(
  'scene', ['scene.c', test_resources, shader_resources],
  dependencies: xrdesktop_deps,
  link_with: xrdesktop_lib,
  include_directories: xrdesktop_inc,
  install: false)