ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'xrdesktop')
ent_conf.set('PACKAGE_BUGREPORT', 'https://gitlab.com/')
ent_conf.set('PACKAGE_NAME', 'xrdesktop')
ent_conf.set('PACKAGE_STRING', 'xrdesktop')
ent_conf.set('PACKAGE_TARNAME', 'xrdesktop-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'http://collabora.com')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', api_version)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
